--- a/everrock.html
+++ b/everrock.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title>DSP Rules</title>
+<title>DSP Notification Rules</title>
 <style>
 body {
     font-family: sans-serif;
@@ -9,12 +9,12 @@ body {
 </style>
 </head>
 <body>
-<h1>DSP Rules</h1>
+<h1>DSP Notification Rules</h1>
 <p>Import/export/delete rules.</p>
 <b>Setup</b>
 <ol>
 <li>Show your bookmarks toolbar. In Chrome, … > Bookmarks > Show Bookmarks Bar. In Firefox, right-click in the title bar and click Bookmarks Toolbar.
-<li>Drag/drop this <a id=bm>DSP Rules v1</a> to the bookmarks toolbar.
+<li>Drag/drop this <a id=bm>DSP Rules v1.4</a> to the bookmarks toolbar.
 </ol>
 <br>
 <b>Usage</b>
