--- a/everrock.html
+++ b/everrock.html
@@ -17,7 +17,7 @@ body {
 <li>Drag/drop this <a id=bm>DSP Rules v1.4</a> to the bookmarks toolbar.
 </ol>
 <br>
-<b>Usage</b>
+<b>Usage (WIP)</b>
 <ol>
 <li>...
 </ol>
