--- a/everrock.html
+++ b/everrock.html
@@ -10,7 +10,7 @@ body {
 </head>
 <body>
 <h1>DSP Notification Rules</h1>
-<p>Import/export/delete rules.</p>
+<p>Import/Export/Activate/Deactive/Delete rules.</p>
 <b>Setup</b>
 <ol>
 <li>Show your bookmarks toolbar. In Chrome, … > Bookmarks > Show Bookmarks Bar. In Firefox, right-click in the title bar and click Bookmarks Toolbar.
