--- a/everrock.html
+++ b/everrock.html
@@ -62,6 +62,7 @@ body {
     form.find('input.activateRules').click(async () => {
         const rules = await getRules();
         for (const rule of rules) {
+            rule.IsAlertRecipients = rule.ObjectsToggle = rule.CriteriaToggle = true;
             rule.Filter = JSON.stringify(rule.Filter);
             await activateRule(rule);
         }
@@ -71,6 +72,7 @@ body {
     form.find('input.deactivateRules').click(async () => {
         const rules = await getRules();
         for (const rule of rules) {
+            rule.IsAlertRecipients = rule.ObjectsToggle = rule.CriteriaToggle = true;
             rule.Filter = JSON.stringify(rule.Filter);
             await deactivateRule(rule);
         }
