--- a/everrock.html
+++ b/everrock.html
@@ -27,7 +27,7 @@ body {
 (async function () {
     
     /* TODO: DomainGPO
-    */
+    */asdf
     
     const headers = {
         'Accept': 'application/json; charset=utf-8',
