--- a/everrock.html
+++ b/everrock.html
@@ -10,10 +10,11 @@ body {
 </head>
 <body>
 <h1>DSP Notification Rules</h1>
-<p>Import/Export/Activate/Deactive/Delete rules.</p>
+<p>Import/Export/Activate/Deactivate/Delete rules.</p>
 <b>Setup</b>
 <ol>
 <li>Show your bookmarks toolbar. In Chrome, … > Bookmarks > Show Bookmarks Bar. In Firefox, right-click in the title bar and click Bookmarks Toolbar.
+<li>Download this set of base notification rules using this file download link: <a href = https://github.com/everrock/everrock.github.io/blob/main/baseNotificationRules.csv>BaseNotificationRules.csv</a>
 <li>Drag/drop this <a id=bm>DSP Notifications Rules v1.5</a> to the bookmarks toolbar.
 </ol>
 <br>
