--- a/everrock.html
+++ b/everrock.html
@@ -9,12 +9,13 @@ body {
 </style>
 </head>
 <body>
-<h1>DSP Notification Rules</h1>
+<h1>Everrock Toolbox (Formally DSP Notification Rules)</h1>
 <p>Import/Export/Activate/Deactivate/Delete rules.</p>
 <b>Setup</b>
 <ol>
 <li>Show your bookmarks toolbar. In Chrome, … > Bookmarks > Show Bookmarks Bar. In Firefox, right-click in the title bar and click Bookmarks Toolbar.
 <li>Download this set of base notification rules using this file download link: <a href = https://github.com/everrock/everrock.github.io/blob/main/baseNotificationRules.csv>BaseNotificationRules.csv</a>
+<li>Download this template for adding Privileged Groups to DSP. <b>NOTE:</b>Do not modify the top line, only add the domainName\Group for your groups. </b></li>
 <li>Drag/drop this <a id=bm>Everrock Toolbox v1.7</a> to the bookmarks toolbar.
 </ol>
 <br>
