--- a/everrock.html
+++ b/everrock.html
@@ -10,7 +10,7 @@ body {
 </head>
 <body>
 <h1>Everrock Toolbox (Formally DSP Notification Rules)</h1>
-<p>Import/Export/Activate/Deactivate/Delete rules.</p>
+<p>Tools to help manage your DSP Notification Rules and Privileged Groups.</p>
 <b>Setup</b>
 <ol>
 <li>Show your bookmarks toolbar. In Chrome, … > Bookmarks > Show Bookmarks Bar. In Firefox, right-click in the title bar and click Bookmarks Toolbar.
